# individual-project

./: .gitignore  Cargo.toml  README.md  kvm-compose.yaml  meta_data_1  run.sh  schema.md  user_data_1
.github/workflows/: rust.yml
dp3t/: README.md  backend.sh  build_app.sh  client.sh  client_anbox.sh  client_emulated.sh  generate_keys.sh  kvm-compose.yaml  local_server.patch
examples/: .gitignore
examples/dp3t/: README.md  backend.sh  build_app.sh  client_anbox.sh  kvm-compose.yaml  local_server.patch  no_bintray.patch
examples/signal/: README.md  client.sh  config.yml  kvm-compose.yaml  nginx.conf  server.sh  service.sh  use_custom_server.patch
examples/signal/server/: config.yml
kvm-compose/: .gitignore  Cargo.toml  README.md  debug.sh  install.sh  run.sh
kvm-compose/assets/: cirros_init.sh  cloud_init.yaml
kvm-compose/src/: actions.rs  download.rs  main.rs
kvm-compose/src/config/: convert.rs  images.rs  mod.rs  nocloud.rs
kvm-compose/src/network/: ip.rs  mod.rs  ovs.rs
kvm-compose/src/ovs/: mod.rs
kvm-compose/src/virt_util/: domain.rs  mod.rs  qemu_img.rs
poster/: slides.pptx
report/: dissertation.bib  dissertation.cls  dissertation.tex
src/: actions.rs  config.rs  converters.rs  download.rs  images.rs  main.rs
src/config/: convert.rs  images.rs  mod.rs  nocloud.rs
src/ovs/: mod.rs
src/virt_util/: devices.rs  domain.rs  mod.rs  os.rs  xml.rs
