[package]
name = "kvm-compose"
version = "0.1.0"
authors = ["Jacob Halsey <jacob@jhalsey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
virt = {version = "0.2.11", git = "https://github.com/jacob-pro/libvirt-rust", rev = "bcb1d9a"}
clap = "3.0.0-beta.2"
serde = {version = "1.0.123", features = ["derive"]}
thiserror = "1.0"
anyhow = "1.0"
serde_yaml = "0.8"
simple_logger = "1.11.0"
log = "0.4.14"
xml-rs = "0.8"
validator = { version = "0.12", features = ["derive"] }
directories = "3.0"
serde_plain = "0.3.0"
reqwest = {version = "0.11.2", features = ["blocking", "default-tls"], default-features = false}
indicatif = "0.15.0"
tempfile = "3"
casual = "0.2.0"
derive-new = "0.5"
